# ur_sdf

./: README.md  converted_from_triangle_list.stl  pyproject.toml  sdf.py
RDF/: sample_sdf_points.py  ur_rdf.py  utils.py  visulize.py
RDF/models/: BP_8.pt
RDF/output_meshes/: forearm.stl  wrist1.stl  wrist2.stl
models/: object_BP_6.pt
output_meshes/: ur3e_whole_body_levelset_0.stl  ur3e_zero.stl  ur3e_zero_pose.stl  whole_body_levelset_0.stl
ur3e/: mesh_to_voxel.py  ur3e.py
