[project]
name = "sdf-ur"
version = "0.1.0"
description = ""
authors = [
    {name = "yulinli-rin",email = "yulin.li@trans-n.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "trimesh (>=4.6.8,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
